# Biomarker-Discovery-with-SHAP

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_exploration.ipynb
outputs/: biomarker_table_real.csv
src/: __init__.py  main.py
src/data/: __init__.py  loader.py  preprocessor.py
src/models/: __init__.py  shap_analysis.py  trainer.py
src/utils/: config.py  logger.py
src/visualization/: __init__.py  plots.py
tests/: test_loader.py  test_models.py  test_preprocessor.py
