[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "shap-biomarker"
version = "1.0.0"
description = "Microbial biomarker discovery using SHAP — IBD vs Healthy (Duvallet et al. 2017)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Subhadip Jana", email = "subhadip@example.com" }]
keywords = ["microbiome", "SHAP", "IBD", "bioinformatics", "machine-learning", "biomarker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.44",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "black>=23.0", "ruff>=0.1", "pre-commit>=3.5"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]

[project.scripts]
run-pipeline = "src.main:main"

[project.urls]
Homepage     = "https://github.com/SubhadipJana1409/day19-biomarker-shap"
Repository   = "https://github.com/SubhadipJana1409/day19-biomarker-shap"
Issues       = "https://github.com/SubhadipJana1409/day19-biomarker-shap/issues"

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=src --cov-report=term-missing"
